--- a/To-DoList/Base.lproj/Main.storyboard
+++ b/To-DoList/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="Wj0-1r-YN6" id="Mtb-Ph-Etc"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ToDo" id="lPH-YM-dYp"/>
+                    <navigationItem key="navigationItem" title="ToDo" id="lPH-YM-dYp">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Pbj-jC-maA">
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="btnAdd_Click:" destination="Wj0-1r-YN6" id="pam-O1-4Rx"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xgO-49-Niu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
